acs-keyvault-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-keyvault
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keyvault-self
    spec:
      containers:
      - image: neilpeterson/aks-helloworld:v1
        name: test-selfssl
        ports:
        - containerPort: 80       
      
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: secrets
        emptyDir:
          # we want the secrets to reside only in-memory
          medium: Memory

      - name: host-sp
        hostPath:
          # this file contains the cluster service-principal, it exists on every node by default
          path: /etc/kubernetes/azure.json
          type: File
---
apiVersion: v1
kind: Service
metadata:
  name: selfssl-svc
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: keyvault-self
