self-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: self-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - xtoph-tls-self.eastus.cloudapp.azure.com
    secretName: mt-ssl-cert
  rules:
  - host: xtoph-tls-self.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-helloworld
          servicePort: 80
